Update Zapier webhook URL in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Chat with our AI assistant for guidance, then book instantly.
 -->
 
 <script>
-  const ZAPIER_HOOK = "YOUR_ZAPIER_WEBHOOK_URL";
+  const ZAPIER_HOOK = "https://hooks.zapier.com/hooks/catch/25805409/uanpar4/";
 
   document.getElementById("sendBtn").addEventListener("click", async () => {
     const name = document.getElementById("name").value.trim();
