--- a/index.html
+++ b/index.html
@@ -91,18 +91,39 @@ Chat with our AI assistant for guidance, then book instantly.
 
 <div class="card">
   <h2>Book on this page (Acuity)</h2>
- <iframe src="https://app.acuityscheduling.com/schedule.php?owner=37898730&ref=embedded_csp" title="Schedule Appointment" width="100%" height="800" frameBorder="0" allow="payment"></iframe><script src="https://embed.acuityscheduling.com/js/embed.js" type="text/javascript"></script>
-</div>
-<p class="small">Not sure which service to choose? Ask the assistant first.</p>
+  <iframe ...></iframe>
+  <script src="https://embed.acuityscheduling.com/js/embed.js" type="text/javascript"></script>
+  <p class="small">Not sure which service to choose? Ask the assistant first.</p>
 </div>
 
-<!-- 🔹 PASTE YOUR CHATBASE EMBED SCRIPT BELOW THIS LINE -->
+<!-- Chatbase embed -->
 <script>
-  <script>
-(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="DQfDahNvQMNluSaOKn_yq";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+(function () {
+  if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+    window.chatbase = (...arguments) => {
+      if (!window.chatbase.q) window.chatbase.q = [];
+      window.chatbase.q.push(arguments);
+    };
+    window.chatbase = new Proxy(window.chatbase, {
+      get(target, prop) {
+        if (prop === "q") return target.q;
+        return (...args) => target(prop, ...args);
+      }
+    });
+  }
+
+  const onLoad = function () {
+    const script = document.createElement("script");
+    script.src = "https://www.chatbase.co/embed.min.js";
+    script.id = "DQfDahNvQMNluSaOKn_yq";  // keep your bot id
+    script.domain = "www.chatbase.co";
+    document.body.appendChild(script);
+  };
+
+  if (document.readyState === "complete") onLoad();
+  else window.addEventListener("load", onLoad);
+})();
 </script>
-
-
 
 <script>
   const ZAPIER_HOOK = "https://hooks.zapier.com/hooks/catch/25805409/uanpar4/";
