--- a/index.html
+++ b/index.html
@@ -91,10 +91,15 @@ Chat with our AI assistant for guidance, then book instantly.
 
 <div class="card">
   <h2>Book on this page (Acuity)</h2>
-  <iframe ...></iframe>
-  <script src="https://embed.acuityscheduling.com/js/embed.js" type="text/javascript"></script>
-  <p class="small">Not sure which service to choose? Ask the assistant first.</p>
-</div>
+ <iframe
+  src="https://app.acuityscheduling.com/schedule.php?owner=37898730&ref=embedded_csp"
+  title="Schedule Appointment"
+  width="100%"
+  height="800"
+  frameborder="0"
+  allow="payment">
+</iframe>
+
 
 <!-- Chatbase embed -->
 <script>
